plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.140'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = 'IzzelAliz Maven'
        url = 'https://maven.izzel.io/releases/'
    }
    maven {
        url = "https://maven.architectury.dev/"
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    if (project.hasProperty('parchment_mappings_version') && project.parchment_mappings_version) {
        parchment {
            mappingsVersion = project.parchment_mappings_version
            minecraftVersion = project.parchment_minecraft_version
        }
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clientData {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    testImplementation "org.junit.jupiter:junit-jupiter:5.14.2"

    jarJar(implementation("org.jetbrains.pty4j:pty4j:${pty4j_version}") {
        exclude group: "net.java.dev.jna"
        exclude group: "org.jetbrains", module: "annotations"
        exclude group: "org.slf4j", module: "slf4j-api"
    }) {
        version {
            strictly "[${pty4j_version}]"
            prefer pty4j_version
        }
    }
    jarJar(implementation("org.jetbrains.kotlin:kotlin-stdlib:2.1.21")) {
        version { strictly "[2.1.21]"; prefer "2.1.21" }
    }
    // Minecraft already supplies JNA 5.17 at runtime; compile against that exact host ABI.
    compileOnly "net.java.dev.jna:jna-platform:5.17.0"

    implementation "icyllis.modernui:ModernUI-NeoForge:${modernui_neoforge_version}"

    implementation("icyllis.modernui:ModernUI-Markflow:${modernui_markflow_version}") {
        exclude group: "org.slf4j", module: "slf4j-api"
        exclude group: "org.apache.logging.log4j", module: "log4j-core"
        exclude group: "org.apache.logging.log4j", module: "log4j-api"
        exclude group: "com.google.code.findbugs", module: "jsr305"
        exclude group: "org.jetbrains", module: "annotations"
        exclude group: "com.ibm.icu", module: "icu4j"
        exclude group: "it.unimi.dsi", module: "fastutil"
    }

    implementation("dev.icyllis:modernui-core:${modernui_core_version}") {
        exclude group: "com.ibm.icu", module: "icu4j"
        exclude group: "it.unimi.dsi", module: "fastutil"
    }

    compileOnly "org.lwjgl:lwjgl-glfw:3.3.3"
    compileOnly "org.lwjgl:lwjgl-opengl:3.3.3"

    // Natives
    runtimeOnly "org.lwjgl:lwjgl:3.3.3:natives-windows"
    runtimeOnly "org.lwjgl:lwjgl-glfw:3.3.3:natives-windows"
    runtimeOnly "org.lwjgl:lwjgl-opengl:3.3.3:natives-windows"

    implementation "dev.architectury:architectury-neoforge:${architectury_version}"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            modernui_version_range : modernui_version_range,
            architectury_version_range: architectury_version_range,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
